[package]
name = "kmip-ttlv"
version = "0.4.0-dev"

rust-version = "1.85.0"
edition = "2024"

authors = ["NLnet Labs <rpki-team@nlnetlabs.nl>"]
description = "An implementation of the KMIP TTLV format."
repository = "https://github.com/NLnetLabs/kmip-ttlv/"
license = "BSD-3-Clause"
keywords = ["KMIP", "TTLV", "serde", "serialization"]
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]

readme = "README.md"
exclude = ["/.github"]

[dependencies]
async-std = { version = "1.10.0", optional = true }
cfg-if = "1.0.0"
hex = {version = "0.4.3", optional = true }
maybe-async = "0.2.6"
serde = { version = "1.0.126", optional = true }
tokio = { version = "1.20.3", features = ["full"], optional = true }
trait-set = "0.2.0"

[features]
default = ["high-level", "sync"]
high-level = ["hex", "serde"]
sync = ["maybe-async/is_sync"]
async-with-async-std = ["async-std"]
async-with-tokio = ["tokio"]

[dev-dependencies]
assert_matches = "1.5.0"
chrono = { version = "0.4.19", default-features = false }
num-bigint = "0.4.0"
pretty_assertions = "1.3.0"
serde_bytes = "0.11.5"
serde_derive = "1.0.126"

# for examples/hex_to_text.rs
hex = "0.4.3"
