[package]
name = "kmip-ttlv"
version = "0.4.0-dev"

rust-version = "1.85.0"
edition = "2024"

authors = ["NLnet Labs <rpki-team@nlnetlabs.nl>"]
description = "An implementation of the KMIP TTLV format."
repository = "https://github.com/NLnetLabs/kmip-ttlv/"
license = "BSD-3-Clause"
keywords = ["KMIP", "TTLV", "serde", "serialization"]
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]

readme = "README.md"
exclude = ["/.github"]

[dependencies]
hex = {version = "0.4.3", optional = true }
serde = { version = "1.0.194", optional = true }

[features]
default = ["high-level"]
high-level = ["hex", "serde"]

[dev-dependencies]
assert_matches = "1.5.0"
chrono = { version = "0.4.39", default-features = false }
num-bigint = "0.4.4"
pretty_assertions = "1.4.0"
serde_bytes = "0.11.15"
serde_derive = "1.0.194"

# for examples/hex_to_text.rs
hex = "0.4.3"
